--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2",
     "sequelize": "^6.37.1"
   }
